# flux-compute

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: MAP.md
examples/: clouds.yaml.example
flux_compute/: __init__.py  auth.py  cli.py  doctor.py  flavors.py  image.py  launch.py  objstore.py  preflight.py  provision.py  sweep.py
tests/: test_flavors.py  test_launch.py  test_map_fresh.py  test_sweep.py
